# sales-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pos_sales_analytics_prd.md  pyproject.toml
src/sales_analytics/: cli.py  config.py
src/sales_analytics/clients/: google_drive_client.py  toss_place_client.py
src/sales_analytics/db/: models.py  session.py
src/sales_analytics/services/: __init__.py  analytics_service.py  batch_service.py  bootstrap_discovery_service.py  business_date_service.py  csv_export_service.py  drive_upload_service.py  ingestion_service.py  normalization_service.py  periodic_report_service.py  scheduler_service.py
tests/: test_pipeline.py
